# snp-sites

./: .gitignore  .travis.yml  AUTHORS  CHANGELOG.md  Dockerfile  INSTALL  LICENSE  Makefile.am  README.md  alignment_file.c  alignment_file.h  configure.ac  fasta_of_snp_sites.c  fasta_of_snp_sites.h  kseq.h  main.c  makefile  parse_phylip.c  parse_phylip.h  phylib_of_snp_sites.c  phylib_of_snp_sites.h  snp-sites.txt  snp_sites  snp_sites.c  snp_sites.h  string_cat.c  vcf.c  vcf.h
example_data/: Readme.md
paper_supporting_material/: snp_sites_create_simulated_data
src/: Makefile.am  alignment-file.c  alignment-file.h  alignment_file.c  alignment_file.h  block_tab_file.c  fasta-of-snp-sites.c  fasta-of-snp-sites.h  fasta_of_snp_sites.c  fasta_of_snp_sites.h  kseq.h  main.c  parse-phylip.c  parse-phylip.h  parse_phylip.c  parse_phylip.h  phylib-of-snp-sites.c  phylib-of-snp-sites.h  phylib_of_snp_sites.c  phylib_of_snp_sites.h  snp-sites.c  snp-sites.h  snp_sites.c  snp_sites.h  string-cat.c  string-cat.h  string_cat.c  string_cat.h  vcf.c  vcf.h
tests/: check-snp-sites.c  check-snp-sites.h  check-vcf.c  check-vcf.h  check_snp_sites  check_snp_sites.c  check_snp_sites.h  helper-methods.c  helper-methods.h  helper_methods.c  helper_methods.h  makefile  run-all-tests.c  run_all_tests.c  run_tests
tests/data/: alignment_file_multiple_lines_per_sequence.aln  alignment_file_one_line_per_sequence.aln  alignment_file_one_line_per_sequence.aln.phylip  alignment_file_one_line_per_sequence.aln.snp_sites.aln  alignment_file_one_line_per_sequence.aln.vcf  alignment_file_one_line_per_sequence_reference.aln.phylip  alignment_file_one_line_per_sequence_reference.snp_sites.aln  alignment_file_with_n.aln  alignment_file_with_n.aln.phylip  alignment_file_with_n.aln.snp_sites.aln  alignment_file_with_n.aln.vcf  pure_mode_alignment.aln  pure_mode_alignment.aln.phylip  pure_mode_alignment.aln.snp_sites.aln  pure_mode_alignment.aln.vcf  pure_mode_monomorphic_alignment.aln  pure_mode_monomorphic_alignment.aln.phylip  pure_mode_monomorphic_alignment.aln.snp_sites.aln  pure_mode_monomorphic_alignment.aln.vcf  small_alignment.aln  small_alignment.constant_site_counts.txt  uneven_alignment.aln
